--- a/styles.css
+++ b/styles.css
@@ -186,10 +186,22 @@ nav li i:hover {
 }
 
 
+@media screen and (max-width: 767px) {
+    #header img {
+        display: none;
+    }
+}
 
 
 
 
+#skills #education {
+    text-align: right;
+}
+
+#skills #education-text {
+    text-align: right;
+}
 
 
 
